# $Id$
#
# $Log$
# Revision 2.0  2004/09/13 19:44:41  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.3  2003/12/29 07:54:36  alexios
# Added modules to SUBDIRS.
#
# Revision 1.2  2003/12/23 08:26:07  alexios
# Added tools subdirectory.
#
# Revision 1.1  2003/12/22 16:52:04  alexios
# Initial revision.
#

SUBDIRS = \
	modules \
	system \
	tools \
	utils
