# $Id: Makefile.am,v 2.0 2004/09/13 19:44:54 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:54  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.3  2004/02/29 17:46:52  alexios
# Moved netclub to the emailclubs module.
#
# Revision 1.2  2003/12/25 18:19:41  alexios
# Netclub now compiles conditionally (on HAVE_METABBS).
#
# Revision 1.1  2003/12/23 08:32:26  alexios
# Initial revision.
#

SUBDIRS = \
	bbsdialog \
	checksup \
	lined \
	updown \
	vised
