# $Id: Makefile.am,v 2.0 2004/09/13 19:44:54 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:54  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.4  2004/02/29 12:27:24  alexios
# Added megistos-admin and connection-helpers.
#
# Revision 1.3  2003/12/23 08:16:42  alexios
# Added more utility directories; removed the *cnv utilities from the
# build. They are no longer pertinent.
#
# Revision 1.2  2003/12/22 16:22:05  alexios
# Removed msgidx from this subtree.
#
# Revision 1.1  2003/12/14 18:45:59  alexios
# Initial revision.
#

SUBDIRS = \
	fixemail \
	mkchan \
	mkxlation \
	sysved \
	megistos-admin \
	connection-helpers

# These were originally used to migrate our data from the Major BBS to
# Megistos during our bootstrap process. They aren't useful to anyone
# these days, so they're not built.

#	rcncnv \
#	regcnv \
#	usrcnv
