# Process this file with automake to produce Makefile.in
#
# $Id$
#
# $Log$
# Revision 2.0  2004/09/13 19:44:36  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1  2004/02/29 12:34:40  alexios
# Initial revision.
#

include $(top_srcdir)/templates/gcs

GCS=libgcs10_builtin.la
libgcs10_builtin_la_SOURCES=gcs_builtin.c

# End of File.
