# -*- Makefile -*-
#
# $Id$
#
# $Log$
# Revision 1.3  2003/12/27 12:44:29  alexios
# Removed two backslashes. Ho hum.
#
# Revision 1.2  2003/12/25 18:15:11  alexios
# Included all sub directories except gallups (which is a 'third-party'
# module and may need some massaging before it compiles properly).
#
# Revision 1.1  2003/12/24 20:08:55  alexios
# Initial revision.
#

SUBDIRS = \
	account \
	adventure \
	bulletins \
	cookie \
	emailclubs \
	files \
	graffiti \
	mailer \
	news \
	notify \
	registry \
	remsys \
	stats \
	telecon

# 	gallups
#	gallups-old


# End of file
