# -*- Makefile -*-
#
# $Id$
#
# $Log$
# Revision 2.0  2004/09/13 19:44:42  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.4  2004/02/29 12:22:36  alexios
# Changed the order of compilation so the most widely used modules are
# first (i.e. the off-line mailer and the email/clubs twin module).
#
# Revision 1.3  2003/12/27 12:44:29  alexios
# Removed two backslashes. Ho hum.
#
# Revision 1.2  2003/12/25 18:15:11  alexios
# Included all sub directories except gallups (which is a 'third-party'
# module and may need some massaging before it compiles properly).
#
# Revision 1.1  2003/12/24 20:08:55  alexios
# Initial revision.
#

SUBDIRS = \
	mailer \
	emailclubs \
	account \
	adventure \
	bulletins \
	cookie \
	files \
	graffiti \
	news \
	notify \
	registry \
	remsys \
	stats \
	telecon

# 	gallups


# End of file
