# $Id: Makefile.am,v 2.0 2004/09/13 19:44:53 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:53  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1  2004/05/21 20:07:01  alexios
# Initial revision.
#

PROGNAMES = bbscleanup

include $(top_srcdir)/templates/script

# End of file.
