# -*- Makefile -*-
#
# $Id: Makefile.am,v 2.0 2004/09/13 19:44:53 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:53  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1  2003/12/22 17:22:59  alexios
# Initial revision.
#

PROGNAMES = bbslogout

include $(top_srcdir)/templates/program

# End of file
