# $Id: Makefile.am,v 2.0 2004/09/13 19:44:53 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:53  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.4  2004/07/15 14:53:01  alexios
# Changes to fix automake warnings about trailling backslashes.
#
# Revision 1.3  2004/02/29 18:13:00  alexios
# Added msgd daemon to the build.
#
# Revision 1.2  2003/12/22 16:23:19  alexios
# Added extra subdirectories for complete build (almost -- msgd is to be
# moved to the emailclubs sub-distribution, and rpc.metabbs is no longer
# pertinent and as such is not build).
#
# Revision 1.1  2003/09/30 15:02:21  alexios
# Initial revision.
#

SUBDIRS = \
	bbsd \
	bbsinit \
	bbslockd \
	emud \
	msgd \
	statd

#	msgd
#	rpc.metabbs

# End of file.
