# -*- Makefile -*-
#
# $Id: Makefile.am,v 2.0 2004/09/13 19:44:45 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:45  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1  2003/12/24 20:11:27  alexios
# Initial revision.
#

PROGNAMES = account

BUILT_SOURCES = mbk_account.h

account_SOURCES = \
	account.c \
	usercleanup.c

include $(top_srcdir)/templates/module

# End of file
