# -*- Makefile -*-
#
# $Id: Makefile.am,v 2.0 2004/09/13 19:44:52 alexios Exp $
#
# $Log: Makefile.am,v $
# Revision 2.0  2004/09/13 19:44:52  alexios
# Stepped version to recover CVS repository after near-catastrophic disk
# crash.
#
# Revision 1.1  2003/12/24 20:11:27  alexios
# Initial revision.
#

PROGNAMES = gallups-old

gallups-old_SOURCES = \
	gallups.c \
	gallups.h

include $(top_srcdir)/templates/module
include $(top_srcdir)/templates/msg

# End of file
